2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* support/include/test_support.h, support/src/tmtests_empty_function.c:
	Add helper so it is easier to write a basic repeated operation
	tmtest.
	* support/src/tmtests_support.c: New file.

2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove itron.

2010-06-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.11.
	Bump _RTEMS_VERSION to 4.10.99.0.

2010-05-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/tmacros.h: Remove PRIdoff_t.

2010-04-22	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* support/include/tmacros.h: Changed check_dispatch_disable_level() to
	treat all non-zero values of _Thread_Dispatch_disable_level equally.

2009-12-08	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* support/include/test_support.h, support/include/tmacros.h,
	support/src/test_support.c: Added support functions to spin for a
	number of ticks and to spin until the next tick.
	* support/src/spin.c: New file.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* support/include/tmacros.h: Use rtems_test_assert() consistently
	instead of system assert(). rtems_test_assert() is designed to
	integrate into the RTEMS test suite infrastructure.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* support/include/tmacros.h: Add service to check status returned by
	POSIX methods which return a pointer which is -1 on error. This
	eliminated some casts.

2009-01-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/tmacros.h: Include rtems/score/thread.h.
	Remove _Thread_Dispatch_disable_level.

2009-01-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/tmacros.h: Add PRIxino_t, PRIdoff_t,
	PRIxblksize_t, PRIxblkcnt_t.
	Comment cleanups.

2009-10-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* support/include/tmacros.h: Add PRIxrtems_task_priority,
	PRIxrtems_task_priority, PRIxrtems_signal_set.
