@@ -1,3 +1,7 @@
+2010-06-25	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	* support/src/tmtests_support.c: Fix warning.
+
 2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* support/include/test_support.h, support/src/tmtests_empty_function.c:
